# ida-c-splitter-build

./: .gitignore  Cargo.toml  README.md  TYPE_PARSER_TEST_REPORT.md  sample.py  sample_types.py  signatures_sample.txt  types_sample.txt
.github/workflows/: build.yml  ci.yml
src/: lib.rs  main.rs  signature_parser.rs  signature_parser_generated_tests.rs  type_parser.rs  type_parser_generated_tests.rs
